# opengl_workshop

./: .gitignore  CMakeLists.txt  README.md
include/: glad.h
includes/: camera.h  shader.h
src/: glad.c  main.cpp  shader.h
src/00_getting_started/01_hello_triangle/: 01_hello_triangle.cpp
src/00_getting_started/02_textures/: 02_textures.cpp
src/00_getting_started/03_transformations/: 03_transformations.cpp
src/00_getting_started/04_coordinate_systems/: 04_coordinate_systems.cpp
src/00_getting_started/05_camera/: 05_camera.cpp
